Basic Homepage Layout

--- a/app/imports/ui/layouts/footer.html
+++ b/app/imports/ui/layouts/footer.html
@@ -2,9 +2,7 @@
   <footer>
     <div style="padding-top: 15px" class="ui center aligned container">
         <hr>
-        Department of Information and Computer Sciences <br />
-        University of Hawaii<br />
-        Honolulu, HI 96822
+        Created for the AT&T Hackathon 2017
     </div>
   </footer>
 </template>
