--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -1,5 +1,5 @@
 <template name="Header">
-  <img style="max-height: 200px" class="ui fluid image" src="/images/placeholder.jpg">
+  <img style="max-height: 300px" class="ui fluid image" src="/images/home-page-logo.png">
   <div style="margin: 0px; border-radius: 0px" class="ui borderless inverted menu">
   <div class="ui container">
       <a class="item" href="{{pathFor 'Home_Page'}}"><h1>Aloha Farmers</h1></a>
