--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -3,6 +3,7 @@
   <div style="margin: 0px; border-radius: 0px" class="ui borderless inverted menu">
   <div class="ui container">
       <a class="item" href="{{pathFor 'Home_Page'}}"><h1>Aloha Farmers</h1></a>
+    <a class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Search_Page' }}">Search</a>
       {{#if currentUser}}
         <a class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Add_Stuff_Page' }}">Add Stuff Here</a>
         <a class="{{ isActiveRoute 'List_Stuff_Page'}} item" href="{{ pathFor 'List_Stuff_Page' }}">List Stuff</a>
