--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -1,14 +1,9 @@
 <template name="Header">
   <img style="max-height: 300px" class="ui fluid image" src="/images/home-page-logo.png">
-  <div style="margin: 0px; border-radius: 0px" class="ui borderless inverted menu">
+  <div style="margin: 0px; border-radius: 0px; background-color: #ffffff" class="ui borderless menu">
   <div class="ui container">
-      <a class="item" href="{{pathFor 'Home_Page'}}"><h1>Aloha Farmers</h1></a>
-    <a class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Search_Page' }}">Search</a>
-      {{#if currentUser}}
-        <a class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Add_Stuff_Page' }}">Add Stuff Here</a>
-        <a class="{{ isActiveRoute 'List_Stuff_Page'}} item" href="{{ pathFor 'List_Stuff_Page' }}">List Stuff</a>
-      {{/if}}
-      <a href="#" class="item">{{> loginButtons}} </a>
+    <a style="color:black" class="item aloha" href="{{pathFor 'Home_Page'}}"><h1>Aloha Farmers</h1></a>
+    <a style="color:black" class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Search_Page' }}"><h3>Search</h3></a>
     </div>
   </div>
 </template>
