Addition search page geolocation

--- a/app/imports/ui/layouts/footer.html
+++ b/app/imports/ui/layouts/footer.html
@@ -2,7 +2,11 @@
   <footer>
     <div style="padding-top: 15px" class="ui center aligned container">
         <hr>
-        Created for the AT&T Hackathon 2017
+      Created for the AT&T Hackathon 2017<br>
+        Brendt McFeeley &nbsp;
+        Shaziney Natvidad<br>
+        Danny Tan &nbsp;
+        Kenji Clemmer
     </div>
   </footer>
 </template>
