Readded List Markets Thingys
Many things were done in this commit.

--- a/app/imports/ui/layouts/footer.html
+++ b/app/imports/ui/layouts/footer.html
@@ -1,12 +1,12 @@
 <template name="Footer">
   <footer>
     <div style="padding-top: 15px" class="ui center aligned container">
-        <hr>
+      <hr>
       Created for the AT&T Hackathon 2017<br>
-        Brendt McFeeley &nbsp;
-        Shaziney Natvidad<br>
-        Danny Tan &nbsp;
-        Kenji Clemmer
+        Kenji Clemmer <br/>
+        Brendt McFeeley <br/>
+        Shaziney Natvidad<br/>
+        Danny Tan <br/>
     </div>
   </footer>
 </template>
