--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -5,6 +5,7 @@
   <div style="margin: 0px; border-radius: 0px; background-color: #ffffff" class="ui inverted center menu">
     <div class="ui centered grid container">
       <a style="color:black" class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Search_Page' }}"><h3>Search</h3></a>
+      <a style="color:black" class="{{ isActiveRoute 'List_Markets_Page'}} item" href="{{ pathFor 'List_Markets_Page' }}"><h3>Markets</h3></a>
     </div>
   </div>
 </template>
