--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -2,10 +2,12 @@
   <a style="color:black" class="item aloha" href="{{pathFor 'Home_Page'}}">
     <img style="max-height: 300px" class="ui fluid image" src="/images/home-page-logo.png">
   </a>
-  <div style="margin: 0px; border-radius: 0px; background-color: #ffffff" class="ui inverted center menu">
+  <div style="margin: 0px; border-radius: 0; box-shadow: none; border: none; background-color: #ffffff" class="ui borderless menu">
     <div class="ui centered grid container">
-      <a style="color:black" class="{{ isActiveRoute 'Add_Stuff_Page'}} item" href="{{ pathFor 'Search_Page' }}"><h3>Search</h3></a>
-      <a style="color:black" class="{{ isActiveRoute 'List_Markets_Page'}} item" href="{{ pathFor 'List_Markets_Page' }}"><h3>Markets</h3></a>
+      <a style="color:black" class="{{ isActiveRoute 'Search_Page'}} item" href="{{ pathFor 'Search_Page' }}"><h3>Nearby</h3></a>
+      <a style="color:black" class="{{ isActiveRoute 'List_Markets_Page'}} item" href="{{ pathFor 'List_Markets_Page' }}"><h3>All Markets</h3></a>
+      <a style="color:black" class="{{ isActiveRoute 'Find_By_City'}} item" href="{{ pathFor 'Find_By_City' }}"><h3>Find By City</h3></a>
+      <a style="color:black" class="{{ isActiveRoute 'Find_By_Day'}} item" href="{{ pathFor 'Find_By_Day' }}"><h3>Find By Day</h3></a>
     </div>
   </div>
 </template>
