Stuff Before it Breaks

--- a/app/imports/ui/layouts/footer.html
+++ b/app/imports/ui/layouts/footer.html
@@ -2,11 +2,8 @@
   <footer>
     <div style="padding-top: 15px" class="ui center aligned container">
       <hr>
-      Created for the AT&T Hackathon 2017<br>
-        Kenji Clemmer <br/>
-        Brendt McFeeley <br/>
-        Shaziney Natvidad<br/>
-        Danny Tan <br/>
+      Created for the 2017 AT&T Hackathon Hawaii<br>
+        Kenji Clemmer | Brendt McFeeley | Shaziney Natvidad | Danny Tan
     </div>
   </footer>
 </template>
