Changed City Text Color

--- a/app/imports/ui/layouts/header.html
+++ b/app/imports/ui/layouts/header.html
@@ -17,11 +17,11 @@
           Find
           by City</h3></a>
         <div class="menu">
-          <div class="item"><a>Honolulu</a></div>
-          <div class="item"><a>Ewa Beach</a></div>
-          <div class="item"><a>Haleiwa</a></div>
-          <div class="item"><a>Waipahu</a></div>
-          <div class="item"><a>Waianae</a></div>
+          <div class="item"><a style="color:black">Honolulu</a></div>
+          <div class="item"><a style="color:black">Ewa Beach</a></div>
+          <div class="item"><a style="color:black">Haleiwa</a></div>
+          <div class="item"><a style="color:black">Waipahu</a></div>
+          <div class="item"><a style="color:black">Waianae</a></div>
         </div>
       </div>
 
